--- a/src/layout/Layout.css
+++ b/src/layout/Layout.css
@@ -3,7 +3,7 @@
 }
 
 .layout .main {
-    width: calc(100vw - 265px);
+    width: calc(100vw - 250px);
 }
 
 .layout .sidebar_component {
@@ -17,11 +17,14 @@
     width: calc(100vw - 270px);
     height: 75px;
     background-color: #ffffff;
+    box-shadow: 0px 10px gray;
 }
 
 .layout .childrens {
     background-color: rgb(229, 229, 229);
-    height: 100%;
+    height: calc(100vh - 75px);
     width: 100%;
     padding: 24px 30px;
+    overflow-y: auto;
+    scrollbar-width:thin
 }
